@@ -4,6 +4,7 @@ helpers/installers/opsera
 
 # Generated config
 include/config.h
+version.hpp
 
 # Python
 *.pyc
