@@ -19,7 +19,7 @@ MACRO(LOAD_SECTIONS _TARGET_LIST _path _title)
 ENDMACRO(LOAD_SECTIONS)
 
 
-MACRO(copy_single_file alias src destDir)
+MACRO(copy_single_file src destDir)
 	GET_FILENAME_COMPONENT(TARGET ${src} NAME)
 	SET(source_file ${CMAKE_CURRENT_SOURCE_DIR}/${src})
 	IF(${destDir} STREQUAL ".")
@@ -35,9 +35,7 @@ MACRO(copy_single_file alias src destDir)
 		OUTPUT ${target_file}
 		COMMENT Copying ${source_file} to ${target_file}
 		)
-	ADD_CUSTOM_TARGET(${TARGET}_${alias} ALL DEPENDS ${target_file})
-	SET_TARGET_PROPERTIES(${TARGET}_${alias} PROPERTIES FOLDER "files/${alias}")
-	INSTALL(CODE "FILE(INSTALL DESTINATION \${CMAKE_INSTALL_PREFIX}/${destDir} TYPE EXECUTABLE FILES \"${source_file}\")")
+	SET(ALL_FILES ${ALL_FILES} ${target_file})
 ENDMACRO(copy_single_file)
 
 MACRO(add_nscp_py_test name script)
